@@ -1,5 +1,16 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added the path-mtu script to perform Path MTU Discovery to the
+  target host using TCP or UDP. The script tries to conserve bandwidth and
+  time by starting with the outgoing interface's MTU and properly handling
+  the Next-Hop MTU field in ICMP responses generated by RFC-compliant
+  intermediate routers. [Kris]
+
+o [NSE] Scripts can now access the MTU of the host.interface device using
+  host.interface_mtu. [Kris]
+
+o Nmap now prints the MTU for interfaces when using --iflist. [Kris]
+
 o [NSE] Removed references to MD2, as OpenSSL 1.x.x doesn't support it anymore
   [alexandru]
 
